--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:latest
+        image: nginx:1.27-alpine
         ports:
         - containerPort: 80
         resources:
@@ -50,9 +50,11 @@ spec:
       - name: nginx-config
         configMap:
           name: nginx-config
+          optional: false
       - name: nginx-secret
         secret:
           secretName: nginx-secret
+          optional: false
       - name: nginx-storage
         persistentVolumeClaim:
           claimName: nginx-pvc
